--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -24,6 +24,30 @@
 ?>
 
 <main id="plings-page">   
+     <section class="head-wrap">
+      <section class="wrapper">
+      <p><h1> What are Plings ? </h1>
+        <p>Contributors to any part of the Opendesktop platform get Plings each time their contribution/product is downloaded. Pling converts download-clicks into monetary value based on the following terms:
+        <p>
+        <p>Each product category is valued by a so-called “Pling-Factor”.
+        <p>
+        <p>1 Pling = 0.01 US-Dollar (1 $-cent)
+        <p>Plings = Number of Downloads * Pling-Factor
+        <p>
+        <p>You can see the value of each category in the list below.
+        <p>
+        <p>Based on the actual amount of content and downloads, we may adjust these values at any time, even during a month.
+        <p>
+        <p>The amount of collected Plings for each user is then paid out every month.
+        <p>
+        <p>Payouts are voluntary and we reserve the right to cancel any single product or payout or all payouts without any reason.
+        <p>
+        <p>In order to receive your Plings, you need to provide a valid PayPal option under your OpenDesktop account settings.
+        <p>We are currently evaluating using Bitcoin as a payout method in the future.
+        <p>
+        <p>We hope this form of compensation values those who put time and effort into creating free and open source software & content and leads to an ever increase of quality and sustainability.        
+    </section>
+    </section>
     <section class="body-wrap" id="cat-list">
         <section class="wrapper">
         	<div class="row title">
