--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5379,10 +5379,11 @@ img.imgpopover
 
 main#plings-page{  
   .wrapper{
-       width:450px;        
+       width:700px;        
        padding:20px;
-       max-height: 700px;
+       /*max-height: 700px;
        overflow: auto;
+       */
        .title{
           background-color:#ccc; 
           height: 30px;
