--- a/httpdocs/theme/flatui/css/style-index-plingcom.css
+++ b/httpdocs/theme/flatui/css/style-index-plingcom.css
@@ -19,7 +19,7 @@
 
      .new-products .rating
     {
-        width:80%;
+        width:60%;
     }
     .new-products .time
     {
@@ -28,6 +28,11 @@
     .new-products .cntComments
     {
         font-size: smaller;
+    }
+    .new-products .packagetypeos
+    {
+      margin: 0px;
+      margin-left: 10px;
     }
     .new-products .productimg
     {
@@ -174,6 +179,16 @@
     padding:30px;
   }
 
-  .mainpage-kde-store .filtertop{
-    padding-top:43px;
+  .mainpage-kde-store {
+    padding-top:0px;
+  }
+
+  .mainpage-kde-store .sidebar-left{
+    padding-top: 35px;
+  }
+  .mainpage-kde-store .content{
+    padding-top: 15px;
+  }
+  .mainpage-kde-store .sidebar-right{
+    padding-top: 15px;
   }
