--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -189,7 +189,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                                         </div>                                       
                                     </div>
                         </div>
-                        <div class="row">
+                        <div class="row" style="padding-top: 20px;">
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                          
                                                 <span>Wallpapers</span>                                              
                                                 <div class="prod-widget-box new-products" >
