--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -49,7 +49,7 @@
           $type = $this->FetchProjectPackageTypesPureStrings($this->product['project_id']);
           if(!empty($type)){
             ?>           
-            <span class="packagetypeos" style="float: left">
+            <span class="packagetypeos" >
             <?=$this->truncate(Default_Model_HtmlPurify::purify($type), 30, '...', false, true)?>
              </span>
         <?php } ?>
